# projC

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
applications/: CMakeLists.txt
applications/main/: CMakeLists.txt
cmake/: EnableGTest.cmake  IncludeProjA.cmake  IncludeProjB.cmake
docs/: Doxyfile
libraries/: CMakeLists.txt
libraries/corelib/: CMakeLists.txt
libraries/utilitylib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unittests/: helloworld.cxx
